<resources>
    <string name="app_name">InClass03</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="department">Department:</string>
    <string name="sis">SIS</string>
    <string name="cs">CS</string>
    <string name="bio">BIO</string>
    <string name="others">Others</string>
    <string name="currentmood">Your current mood:</string>
    <string name="submit">Submit</string>
    <string name="mainactivity">Main Activity</string>
    <string name="displayactivity">Display Activity</string>
    <string name="editactivity">Edit Activity</string>
    <string name="stdentinformation">Student Information</string>
    <string name="studentname">Name:</string>
    <string name="nullvalue" />
    <string name="studentemail">Email:</string>
    <string name="studentdepartment">Department:</string>
    <string name="studentmood">Mood:</string>
    <string name="test1">test1</string>
    <string name="save">Save</string>
    <string name="editinfo">Edit Information</string>
</resources>
