<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_action_edit"
    android:id="@+id/displayactivityxml"
    android:padding="15dp"
    tools:context="com.example.venkatesh.inclass03.DisplayActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stdentinformation"
        android:id="@+id/tvstudentinfo"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/studentname"
                android:id="@+id/tvname" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nullvalue"
                android:id="@+id/tvnamedis" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:id="@+id/ivname"
                android:src="@drawable/ic_action_edit" />
        </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/studentemail"
            android:id="@+id/tvemail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nullvalue"
            android:id="@+id/tvemaildis" />

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:id="@+id/ivemail"

            android:src="@drawable/ic_action_edit" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/studentdepartment"
            android:id="@+id/tvdept" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nullvalue"
            android:id="@+id/tvdeptdis" />

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:id="@+id/ivdepartment"
            android:src="@drawable/ic_action_edit" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/studentmood"
            android:id="@+id/tvmood" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nullvalue"
            android:id="@+id/tvmooddis" />

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:id="@+id/ivmood"
            android:src="@drawable/ic_action_edit" />
    </TableRow>
    </TableLayout>
</LinearLayout>
